--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "daisyui": "^2.15.0",
     "firebase": "^9.8.1",
     "react": "^18.1.0",
+    "react-countup": "^6.2.0",
     "react-dom": "^18.1.0",
     "react-firebase-hooks": "^5.0.3",
     "react-helmet": "^6.1.0",
@@ -21,6 +22,8 @@
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.4.14",
     "web-vitals": "^2.1.4"
   },
